@@ -5,6 +5,7 @@ import com.example.sbimgutil.utils.ConsoleProgressBar;
 import com.example.sbimgutil.utils.FileFetchUtils;
 import com.example.sbimgutil.utils.TifUtils;
 import lombok.extern.slf4j.Slf4j;
+import lombok.var;
 import org.apache.commons.io.FileUtils;
 
 import javax.imageio.ImageIO;
@@ -12,6 +13,7 @@ import java.awt.image.BufferedImage;
 import java.io.*;
 import java.nio.charset.Charset;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class BookImageDirProcessTask implements ITask {
@@ -49,11 +51,13 @@ public class BookImageDirProcessTask implements ITask {
             if(sectionDirs==null) return;
 
             //处理pdf合并任务
-            List<ProcessConfigItem> nonPdfConfigItems = processConfigItemList.stream().filter(
-                    e -> !"pdf".equals(e.getFormat())).toList();
+//            List<ProcessConfigItem> nonPdfConfigItems = processConfigItemList.stream().filter(
+//                    e -> !"pdf".equals(e.getFormat())).toList();
+            List<ProcessConfigItem> nonPdfConfigItems = processConfigItemList.stream().filter(e->!"pdf".equals(e.getFormat())).collect(Collectors.toList());
+            List<String> nonPdfConfigItems1 = processConfigItemList.stream().map(ProcessConfigItem::getFormat).collect(Collectors.toList());
             //处理pdf合并任务
             List<ProcessConfigItem> pdfConfigItems = processConfigItemList.stream().filter(
-                    e -> "pdf".equals(e.getFormat())).toList();
+                    e -> "pdf".equals(e.getFormat())).collect(Collectors.toList());
 
             sectionDirLoop:for (File sectionDir : sectionDirs) {
                 HashSet<File> files = new HashSet<>();
@@ -113,7 +117,7 @@ public class BookImageDirProcessTask implements ITask {
             TifUtils.drawBlurPic(bufferedImageToSave, blurBufferedImage,scale);
         }
         switch (format) {
-            case "jp2"->{
+            case "jp2":{
                 float fsize = oriTifFile.length() / (1024f * 1024);
 
                 float encoding = (float) (5.842e-06 * Math.pow(fsize, 2) - 0.002235 * fsize + 0.2732);
@@ -131,17 +135,21 @@ public class BookImageDirProcessTask implements ITask {
                     log.debug("压缩次数{},输出文件大小{}m,原文件大小{}m,编码率{},文件名{}",compressTime,
                             fsize,oriTifFile.length()/1024,encoding,oriTifFile.getAbsolutePath());
                     compressTime+=1;
-                    if(fsize>limitM)
+                    if(fsize>limitM) {
                         encoding=-encoding/10+encoding;
-                    else if(fsize<limitM*0.8)
+                    } else if(fsize<limitM*0.8) {
                         encoding=encoding/10+encoding;
-                    else break;
+                    } else {
+                        break;
+                    }
                 }
+                break;
             }
-            case "jpg" -> {
+            case "jpg" : {
                 TifUtils.transformImgToJpg(bufferedImageToSave, new FileOutputStream(outFile), compressLimit);
+                break;
             }
-            default -> {
+            default : {
                 break;
             }
         }
@@ -169,8 +177,9 @@ public class BookImageDirProcessTask implements ITask {
         int pointIndex = newFileAbsPath.lastIndexOf(".");
         newFileAbsPath=newFileAbsPath.substring(0,pointIndex+1)+format;
         File outFile = new File(newFileAbsPath);
-        if(!outFile.getParentFile().exists())
+        if(!outFile.getParentFile().exists()) {
             FileUtils.forceMkdir(outFile.getParentFile());
+        }
         return outFile;
     }
 }
